--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.github.TutorialsAndroid:FilePicker:v8.0.19'
 }
